# rusty-puzzle

./: Cargo.toml  README.md
src/: app.rs  heuristic.rs  lib.rs  main.rs  solvers.rs  solverstest.rs  test.rs
src/puzzlin/: heuristic.rs  mod.rs  solvers.rs  solverstest.rs  test.rs
src/tests/: mod.rs
